--- a/duplicateVideoFinder/duplicateVideoFinder.csproj
+++ b/duplicateVideoFinder/duplicateVideoFinder.csproj
@@ -3,6 +3,8 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.0</TargetFramework>
+    <ApplicationIcon />
+    <StartupObject>duplicateVideoFinder.Program</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
