--- a/duplicateVideoFinder/duplicateVideoFinder.csproj
+++ b/duplicateVideoFinder/duplicateVideoFinder.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     <PackageReference Include="Xabe.FFmpeg" Version="3.5.0" />
   </ItemGroup>
 
