--- a/duplicateVideoFinderWindowsGUI/duplicateVideoFinderWindowsGUI.csproj
+++ b/duplicateVideoFinderWindowsGUI/duplicateVideoFinderWindowsGUI.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Xabe.FFmpeg" Version="3.5.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\duplicateVideoFinder\duplicateVideoFinder.csproj" />
   </ItemGroup>
 
