--- a/duplicateVideoFinderWindowsGUIDesigner/duplicateVideoFinderWindowsGUIDesigner.csproj
+++ b/duplicateVideoFinderWindowsGUIDesigner/duplicateVideoFinderWindowsGUIDesigner.csproj
@@ -47,20 +47,32 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\duplicateVideoFinderWindowsGUI\Form1.cs">
-      <Link>Form1.cs</Link>
+    <Compile Include="..\duplicateVideoFinderWindowsGUI\FrmStart.cs">
+      <Link>FrmStart.cs</Link>
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="..\duplicateVideoFinderWindowsGUI\Form1.Designer.cs">
-      <Link>Form1.Designer.cs</Link>
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="..\duplicateVideoFinderWindowsGUI\FrmStart.Designer.cs">
+      <Link>FrmStart.Designer.cs</Link>
+      <DependentUpon>FrmStart.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="..\duplicateVideoFinderWindowsGUI\FrmStart.resx">
+      <Link>FrmStart.resx</Link>
+      <DependentUpon>FrmStart.cs</DependentUpon>
+    </EmbeddedResource>
+    <Compile Include="..\duplicateVideoFinderWindowsGUI\FrmSelectFilesToKeep.cs">
+      <Link>FrmSelectFilesToKeep.cs</Link>
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="..\duplicateVideoFinderWindowsGUI\FrmSelectFilesToKeep.Designer.cs">
+      <Link>FrmSelectFilesToKeep.Designer.cs</Link>
+      <DependentUpon>FrmSelectFilesToKeep.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="..\duplicateVideoFinderWindowsGUI\FrmSelectFilesToKeep.resx">
+      <Link>FrmSelectFilesToKeep.resx</Link>
+      <DependentUpon>FrmSelectFilesToKeep.cs</DependentUpon>
+    </EmbeddedResource>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="..\duplicateVideoFinderWindowsGUI\Form1.resx">
-      <Link>Form1.resx</Link>
-      <DependentUpon>Form1.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
