moving away from ffmpeg and to using windows shell. now that i push it i notice this breaks the crossplatformness of the finder ughhhh, but i can still use it for the UI

--- a/duplicateVideoFinderWindowsGUI/duplicateVideoFinderWindowsGUI.csproj
+++ b/duplicateVideoFinderWindowsGUI/duplicateVideoFinderWindowsGUI.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Xabe.FFmpeg" Version="3.5.0" />
+    <PackageReference Include="Microsoft-WindowsAPICodePack-Shell" Version="1.1.3.3" />
   </ItemGroup>
 
   <ItemGroup>
