--- a/duplicateVideoFinder/duplicateVideoFinder.csproj
+++ b/duplicateVideoFinder/duplicateVideoFinder.csproj
@@ -8,8 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft-WindowsAPICodePack-Shell" Version="1.1.3.3" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+    <PackageReference Include="Xabe.FFmpeg" Version="3.5.0" />
   </ItemGroup>
 
   <ItemGroup>
