--- a/duplicateVideoFinder/duplicateVideoFinder.csproj
+++ b/duplicateVideoFinder/duplicateVideoFinder.csproj
@@ -1,15 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <OutputType>Library</OutputType>
+    <TargetFramework>netstandard2.1</TargetFramework>
     <ApplicationIcon />
-    <StartupObject>duplicateVideoFinder.Program</StartupObject>
+    <StartupObject></StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
-    <PackageReference Include="Xabe.FFmpeg" Version="3.5.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Xabe.FFmpeg" Version="4.0.0" />
   </ItemGroup>
 
   <ItemGroup>
