--- a/duplicateVideoFinderWindowsGUI/duplicateVideoFinderWindowsGUI.csproj
+++ b/duplicateVideoFinderWindowsGUI/duplicateVideoFinderWindowsGUI.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft-WindowsAPICodePack-Shell" Version="1.1.3.3" />
+    <PackageReference Include="Microsoft-WindowsAPICodePack-Shell" Version="1.1.4" />
+    <PackageReference Include="Xabe.FFmpeg.Downloader" Version="4.0.0" />
   </ItemGroup>
 
   <ItemGroup>
